--- a/src/app/component/carrousel/style.css
+++ b/src/app/component/carrousel/style.css
@@ -1,32 +1,35 @@
 .carrousel {
-
     position: relative;
 }
 
 .image {
     border-radius: 20px;
     object-fit: cover;
+    opacity: 0.5;
+    margin: 0;
 }
 
 .slide {
     opacity: 1;
+    background-color: #000;
+    border-radius: 20px;
+    height: 450px;
 }
 
 .content-slide {
     position: absolute;
     top: 0;
     width: 100%;
-    height: 100%;
+    height: 450px;
     padding-top: 5%;
     padding-bottom: 5%;
-    background-color: #0000006e;
     border-radius: 20px;
 
 }
 
 .text {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     height: 65%;
     flex-direction: column;
     width: 800px;
@@ -67,18 +70,14 @@ h1 {
 }
 
 
-h2 {
-    font-family: var(--text);
-    color: var(--orange);
-    font-size: 16px;
-    text-align: center;
-}
+
 
 p {
     font-family: var(--text);
     color: #fff;
     font-size: 16px;
     text-align: center;
+    line-height: 2;
 }
 
 .button-slide {
