--- a/src/app/component/carrousel/style.css
+++ b/src/app/component/carrousel/style.css
@@ -8,6 +8,8 @@
     object-fit: cover;
     opacity: 0.5;
     margin: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .slide {
@@ -21,7 +23,7 @@
     position: absolute;
     top: 0;
     width: 100%;
-    height: 450px;
+    height: 100%;
     padding-top: 5%;
     padding-bottom: 5%;
     border-radius: 20px;
@@ -69,8 +71,6 @@ h1 {
         transform: perspective(600px) translate3d(0, -60px, -1500px) rotateY(75deg)
     }
 }
-
-
 
 
 p {
@@ -126,4 +126,95 @@ p {
 .btn-2:hover {
     box-shadow: 0 5px #ffffff65;
     transform: translateY(-5px);
+}
+
+
+@media screen and (max-width: 1139px) and (min-width: 810px) {
+
+    .carrousel {
+        width: 96vw;
+        left: 2%;
+    }
+
+    .slide {
+        height: 45vh;
+
+    }
+
+    .text {
+        width: 635px;
+        align-items: center;
+    }
+
+    h1 {
+        width: 48vw;
+    }
+
+    .button-slide {
+        width: 635px;
+        justify-content: space-around;
+    }
+
+}
+
+@media screen and (max-width: 809px) {
+
+    .carrousel {
+
+        left: 2.5%;
+    }
+
+    .slide {
+
+        border-radius: 15px;
+        height: 160vw;
+        width: 95vw;
+    }
+
+    .image {
+        border-radius: 15px;
+        height: 100%;
+        width: 100%;
+    }
+
+    .content-slide {
+        height: 100%;
+        width: 100%;
+        border-radius: 15px;
+    }
+
+    .text {
+        height: 60%;
+        width: 80%;
+    }
+
+    h2 {
+        font-size: 4vw;
+    }
+
+    h1 {
+        font-size: 11vw;
+    }
+
+
+
+    p {
+        font-size: 3vw;
+    }
+
+    .button-slide {
+        height: 40%;
+        width: 80%;
+        flex-direction: column;
+    }
+
+    .btn-1,
+    .btn-2 {
+        height: 6vh;
+        border-radius: 2vw;
+        width: 45vw;
+
+    }
+
+
 }
