--- a/src/app/component/navbar/style.css
+++ b/src/app/component/navbar/style.css
@@ -64,118 +64,35 @@ details {
     display: none;
 }
 
-/* @keyframes backInUp {
-    0% {
-        transform: translateY(0px);
-        opacity: 0;
+
+
+@media screen and (max-width: 1140px) {
+
+    nav {
+        width: 100vw;
     }
-
-    80% {
-        transform: translateY(0px);
-        opacity: 1;
-    }
-
-    100% {
-        opacity: 1;
-    }
-}
-
-.backInUp {
-    animation-name: backInUp;
-} */
-
-
-
-
-@media screen and (max-width: 768px) {
 
     .logo {
-        font-size: 5vw;
-        position: fixed;
-        top: 5px;
-    }
+        margin-left: 5px;
+        font-size: 3vw;
 
-    nav details[open] {
-        height: 35vh;
-        background: var(--bg);
-    }
-
-    details {
-        display: block;
-        width: 100%;
-        height: 25vh;
-    }
-
-    details[open] .menu-icon {
-        display: none;
-        /* Masque l'icône de menu */
-    }
-
-    details[open] .close-icon {
-        display: inline;
-        /* ou 'block', pour afficher l'icône de fermeture */
-    }
-
-    summary {
-        position: fixed;
-        top: 9px;
-
-        right: 25px;
-        font-size: 12px;
-        color: var(--orange);
-        cursor: pointer;
-    }
-
-    .menu-icon {
-        display: inline;
-        /* ou 'block', selon votre mise en page */
-    }
-
-    .close-icon {
-        display: none;
-        /* Masque l'icône de fermeture par défaut */
-    }
-
-    #links-pc {
-        display: none;
-    }
-
-    #social-pc {
-        display: none;
-    }
-
-    .menu-mobile {
-        position: fixed;
-        top: 35px;
-        left: 35%;
     }
 
     .nav-links {
-        height: 20vh;
-        justify-content: space-around;
-        flex-direction: column;
+        width: 50vw;
     }
 
     .nav-links li {
-
-        border-radius: 10px;
-        text-align: center;
-        border: none;
-        cursor: pointer;
-        background: #E0E0E0;
-        padding: 12px 0 12px 0;
-        width: 80px;
-        /* margin: auto; */
+        font-size: 1.5vw;
     }
 
     .social-links {
-        width: 30vw;
-        justify-content: space-around;
+        width: 12vw;
+        justify-content: space-evenly;
     }
 
     .social-icon {
         font-size: 3vw;
+
     }
-
-
 }
