--- a/src/app/component/yourtable/style.css
+++ b/src/app/component/yourtable/style.css
@@ -102,3 +102,14 @@ form button:hover {
     box-shadow: 0 5px #FF4E0082;
     transform: translateY(-5px);
 }
+
+
+@media screen and (max-width: 768px) {
+
+
+    form {
+        width: 74%;
+    }
+
+
+}
